<resources>
    <string name="app_name">Recife Fitness</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="textoExemplo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. </string>
    <string name="msgError">User error</string>
    <string name="cadastro">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="txtEmail">Email</string>

</resources>